LWDEV-6220: Fixed asset menu position on small screens

--- a/src/components/WalletBalanceList/style.scss
+++ b/src/components/WalletBalanceList/style.scss
@@ -111,6 +111,12 @@
       }
     }
   }
+
+  @media (max-width: $screen-tablet) {
+    .dropdown__container {
+      margin-left: -125px;
+    }
+  }
 }
 
 .issuer {
@@ -203,16 +209,5 @@
     top: -2px;
 
     @include rem(margin-right, 10px);
-  }
-
-  &__item {
-    &_disabled {
-      opacity: 0.6;
-      cursor: not-allowed;
-
-      a {
-        cursor: not-allowed;
-      }
-    }
   }
 }
